Adding ngx-bootstrap and making layout

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -6,9 +6,64 @@
     <section class="sort-top"></section>
   </section>
 
-  
-  <section class="side-filter"></section>
-  <div class="product-list">
+  <div class="row">
+    <div class="col-lg-3 side-filter">
+      <div class="list-group">
+        <a href="#" class="list-group-item">Filter 1</a>
+        <a href="#" class="list-group-item">Filter 2</a>
+        <a href="#" class="list-group-item">Filter 3</a>
+      </div>
+
+    </div>
+    <div class="col-lg-9">
+
+     
+
+      <div class="row">
+
+        <div class="col-lg-4 col-md-6 mb-4" *ngFor="let product of productLists">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="assets/images/{{product.imgSrc}}" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">{{product.name}}</a>
+              </h4>
+              <h5><p class="product-price">Price : <span class="pad-r-8">{{product.price}}</span><span>{{product.currency}}</span></p>
+              </h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-md btn-block btn-outline-primary product-add" *ngIf="product.stockAvailable" (click)="handleAddtoCart(product)">Add To Cart</button>
+              <button class="btn btn-md btn-block btn-outline-primary product-add text-muted" disabled *ngIf="!product.stockAvailable">Sold Out</button>
+              <button *ngIf="addedToCart" class="product-remove">Remove</button>
+              <a class="product-link text-center" href="productDetails/{{product.pid}}">View Details >></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Item Five</a>
+              </h4>
+              <h5>$24.99</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">★ ★ ★ ★ ☆</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+
+    </div>
+  </div>
+
+  <!-- <div class="product-list">
     <div class="product pad-16 text-center" *ngFor="let product of productLists">
       <figure class="product-image-container ">
         <img src="assets/images/{{product.imgSrc}}" alt="Product Image" class="product-image"/>
@@ -30,5 +85,5 @@
       
       
     </div>
-  </div>
+  </div> -->
 </section>
