--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,17 @@
   </li>
 </ul> -->
 <!-- Nav links within site -->
-<nav>
+<!-- <nav>
   <a [routerLink]="['/login']" >Login</a>
   <a [routerLink]="['/products']" >Products</a>
   <a [routerLink]="['/cart']" >Cart <span> {{data}}</span></a>
-</nav>
-<!-- <span *ngIf="(cartCount | async) as cart;"> 0 {{cart.length}}</span> -->
+</nav> -->
+
 <hr/>
 <router-outlet></router-outlet>
+<footer class="py-3 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright © Name 2019</p>
+  </div>
+  <!-- /.container -->
+</footer>
